# servox

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
servox/: Cargo.toml  README.md  build.rs  memory.x  rust-toolchain.toml
servox/src/: lib.rs
src/: main.rs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
